# FastAPI_base

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  main.py
app/api/: router.py
app/api/v1/: auth.py  bookings.py  payments.py  router.py  sports.py  timeslots.py  venues.py
app/constants/: __init__.py  enums.py  messages.py
app/core/: base_crud.py  base_schema.py  bootstrap.py  config.py  exceptions.py  logging.py  middleware.py  security.py
app/crud/: user.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/features/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
app/features/bookings/: __init__.py  crud.py  models.py  router.py  schemas.py  service.py  tasks.py
app/features/payments/: __init__.py  crud.py  models.py  router.py  schemas.py  service.py  tasks.py
app/features/users/: __init__.py  crud.py  models.py  router.py  schemas.py  service.py
app/features/venues/: __init__.py  crud.py  models.py  router.py  schemas.py  service.py
app/models/: user.py
app/schemas/: item.py
app/services/: auth_service.py
app/utils/: __init__.py  email.py  helpers.py  pagination.py  sms.py  storage.py  validators.py
app/workers/: beat_schedule.py  celery_app.py
scripts/: create_superuser.py  reset_db.py  seed_data.py
tests/: conftest.py
